--- a/radio.html
+++ b/radio.html
@@ -155,7 +155,7 @@ function showSlides() {
 		<article id="main-colAbt">
 			<h1 class="page-title">Amateur Radio</h1>
 			<p>
-				You are able to watch your favorite YouTube videos because of radio. All wireless communications with radio. Amateur radio means engineers messing around with electronics, waves and equipment to see what one can do.
+				You are able to watch your favorite YouTube videos because of radio. All wireless communications began with radio. Amateur radio means engineers playing around with electronics, radio frequency and equipment at multiple allocated bands to see what can be done.
 
 <!--
 			<p class="dark">
