--- a/radio.html
+++ b/radio.html
@@ -228,7 +228,7 @@ function showSlides() {
 
 				<li>
 					<h3>Meeting Ward Silver</h3>
-					<p>Author and engineer, Ward Silver, invited my friends and I to his main operating station. He has 3 giant towers and a lot of other cool stuff. He taught us how to safely climb a tower and some grounding and bonding basics.</p>
+					<p>Author and engineer, Ward Silver, invited my friends and I to his main operating station. He has 3 giant towers and a lot of other cool stuff. He taught us how to safely climb a tower as well as some grounding and bonding basics.</p>
 					<!--  <p>Pricing: $150 - $200</p> -->
 
 
