--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							<div class="dropdown-content">
 								<a href="radio.html">Radio</a>
 								<a href="engineering.html">Engineering</a>
-								<a heref="fitness.html">Fitness</a>
+								<a href="fitness.html">Fitness</a>
 								<a href="gallery.html">Gallery</a>
 
 							</div>
