--- a/engineering.html
+++ b/engineering.html
@@ -147,7 +147,7 @@
           <ul id="services">
             <li>
               <h3>Power Transformers</h3>
-              <p>Below is a picture of a test transformer from one of the places I work at.</p>
+              <p>Cool shiny test transformer.</p>
             <!--  <p>Pricing: $150 - $200</p> -->
 
             <center>
@@ -159,7 +159,7 @@
 
             <li>
               <h3>Electromagnetic Compatability Lab</h3>
-              <p>This measurement was done with a 0.5 mm pitch probe.</p>
+              <p>A lot was CUI data so I could hardly take any pictures:(</p>
               <!--  <p>Pricing: $150 - $200</p> -->
 
               <center>
