--- a/fitness.html
+++ b/fitness.html
@@ -126,6 +126,23 @@
 		</script>
 
 
+
+		<section id="main">
+			<div class="container">
+
+
+
+<h1 style="text-INDENT:45px">Fitness</h1>
+   <p style="padding-left: 46px; padding-right:46px; text-INDENT: 45px;"> Not much to be said here except shred semester is here &#x1F525;&#x1F525;&#x1F525;!! Haha, jokes aside, I want to lose all the fat that I have
+		  gained and be able to fit into the tight, never worn t-shirts. I love eating and I am constantly losing and gaining weight. This is obviously unhealthy and I want to get into a healthy shape again and maintain it.
+			I also developed the bad habbit of staying seated at a desk all day and not moving around...I'm trying to change that! I plan on doing cardio at least three times a week.</p>
+
+			<p style="padding-left: 46px; padding-right:46px; text-INDENT: 45px;"> Whatever I do, I'm not going to touch any pre-workout, protein powder or any supplements. You also won't see me squatting or benching.
+			I'm also trying to gain a bit of muscle and strength in order to achive some calisthenics goals. Stayed tuned for that&#128572;. </p>
+</div>
+</section>
+
+<!--
     <section id="main">
       <div class="container">
 
@@ -134,13 +151,9 @@
 
 
         		<p style="text-INDENT: 40px">
-        			Generally, an electric field is produced by a charged particle. A force is exerted by this electric field on other charged particles. Positive charges accelerate in the direction of the field and negative charges accelerate in a direction opposite to the direction of the field.
-        			The Magnetic field is produced by a moving charged particle. A force is exerted by this magnetic field on other moving particles. The force on these charges is always perpendicular to the direction of their velocity and therefore only changes the direction of the velocity, not the speed.
-        			So, the electromagnetic field is produced by an accelerating charged particle. Electromagnetic waves are nothing but electric and magnetic fields travelling through free space with the speed of light c. An accelerating charged particle is when the charged particle oscillates about an equilibrium position. If the frequency of oscillation of the charged particle is f, then it produces an electromagnetic wave with frequency f. The wavelength λ of this wave is given by λ = c/f.  Electromagnetic waves transfer energy through space.
+        			Not much to be said here except for that I want to be able to wear the cool shirts that are too tight on me that my mom wants to give away.
 
         		</p>
-
-
 
         </article>
 
@@ -157,11 +170,8 @@
 			So, the electromagnetic field is produced by an accelerating charged particle. Electromagnetic waves are nothing but electric and magnetic fields travelling through free space with the speed of light c. An accelerating charged particle is when the charged particle oscillates about an equilibrium position. If the frequency of oscillation of the charged particle is f, then it produces an electromagnetic wave with frequency f. The wavelength λ of this wave is given by λ = c/f.  Electromagnetic waves transfer energy through space.
 
 		</p>
-
-
-
 </article>
-
+-->
 
     <footer>
       <p>Pabloidea, Copyright &copy; 2022 <br>
