--- a/radio.html
+++ b/radio.html
@@ -154,8 +154,8 @@ function showSlides() {
 	<div class="container">
 		<article id="main-colAbt">
 			<h1 class="page-title">Amateur Radio</h1>
-			<p>
-				You are able to watch your favorite YouTube videos because of radio. All wireless communications began with radio. Amateur radio means engineers playing around with electronics, radio frequency and equipment at multiple allocated bands to see what can be done.
+			<p style="text-INDENT:45px">
+				You are able to watch your favorite YouTube videos because of radio. All wireless communications began with radio. Amateur radio means engineers playing around with electronics, radio frequency and equipment at multiple allocated bands to see what can be done and have fun.
 
 <!--
 			<p class="dark">
