--- a/about.html
+++ b/about.html
@@ -176,7 +176,8 @@
       <td>
 				<p  style="text-INDENT: 40px">
 				           This summer I worked at my school's Electromagnetic Compatibility (EMC) Lab where I had the priveledge to work on a project for
-									 The Defense Advanced Research Projects Agency (DARPA). I also worked as a contractor at a company in Saint Louis, where I worked on programs that evaluate power transformers.
+									 The Defense Advanced Research Projects Agency
+<a href="https://en.wikipedia.org/wiki/DARPA">(DARPA)</a>. I also worked as a contractor at a company in Saint Louis, where I worked on programs that evaluate power transformers.
 				        </p>
       </td>
       <td>
