--- a/about.html
+++ b/about.html
@@ -212,7 +212,7 @@
 
 
 <p style="text-INDENT: 40px; padding-left: 60px; padding-right: 60px;">
-	I built the front end of this website for fun and I plan to write some backend code later. The "subscribe" button does nothing.
+	I built the front end of this website for fun and I plan to write some backend code later. Right now, the "subscribe" button does nothing.
 	I am not a web developer so a lot is poorly written, but the great thing is that I'm good at copying and pasting. At least it's not as bad as my grammar.
 
 </p>
