--- a/gallery.html
+++ b/gallery.html
@@ -283,11 +283,9 @@ function showSlides() {
 
 	<div class="clearfix"></div>
 
-	<div style="padding:6px;">
-	  <p>I have many pictures stored in the memory of my computer, but I mostly don't bother to look at them. As you can see, some of the pictures here are older.
-			With this gallery in place, I will be taken back in time to some of the good times. While I was working on getting pictures up here on the site,
-			I felt nostalgia. I enjoyed looking at the past good times.</p>
-	  <p>Thank you for viewing my gallery. I hope you enjoyed it:)</p>
+	<div style="padding-left: 60px; padding-right: 60px;">
+	  <p>I might be at the bottom of photography and poses but, I can't be good at everything, right? haha</p>
+	  <p style="text-INDENT: 40px">Thank you for viewing my gallery. I hope you enjoyed it:)</p>
 	</div>
 
 	</body>
