--- a/about.html
+++ b/about.html
@@ -219,7 +219,7 @@
 <br><br><br>
 
     <footer>
-      <p>Pabloidea, Copyright &copy; 2022 <br>
+      <p>Pabloidea, 2022 <br>
 			Website made by Pablo;)</p>
     </footer>
 	</body>
