--- a/fitness.html
+++ b/fitness.html
@@ -173,7 +173,7 @@
 -->
 
     <footer>
-      <p>Pabloidea, Copyright &copy; 2022 <br>
+      <p>Pabloidea, 2022 <br>
 			Website made by Pablo;)</p>
     </footer>
 	</body>
