--- a/engineering.html
+++ b/engineering.html
@@ -216,7 +216,7 @@
 
 
     <footer>
-      <p>Pablo Espíndola Chavarría, Copyright &copy; 2022 <br>
+      <p>Pabloidea, 2022 <br>
 			Website made by Pablo;)</p>
     </footer>
 	</body>
