--- a/gallery.html
+++ b/gallery.html
@@ -300,7 +300,7 @@ function showSlides() {
 
 
     <footer>
-      <p>Pabloidea, Copyright &copy; 2022 <br>
+      <p>Pabloidea, 2022 <br>
       Website made by Pablo;)</p>
     </footer>
 	</body>
