--- a/radio.html
+++ b/radio.html
@@ -262,7 +262,7 @@ function showSlides() {
 
 
 <footer>
-	<p>Pabloidea, Copyright &copy; 2022 <br>
+	<p>Pabloidea, 2022 <br>
 	Website made by Pablo;)</p>
 </footer>
 </body>
