--- a/radio.html
+++ b/radio.html
@@ -193,7 +193,7 @@ function showSlides() {
 
 				<li>
 					<h3>Radio gang [WØEEE]</h3>
-					<p>Antennas, RF, and computer talk only. We all hold extra class licenses and this semester we are all taking an Antennas course together&#x1F4E1;&#128515;</p>
+					<p>Antennas, RF, and computer talk only.<br> We all hold extra class licenses and this semester we are all taking an Antennas course together&#x1F4E1;&#128515;</p>
 						<!--  <p>Pricing: $150 - $200</p> -->
 
 						<div class="row">
