--- a/engineering.html
+++ b/engineering.html
@@ -147,7 +147,7 @@
           <ul id="services">
             <li>
               <h3>Power Transformers</h3>
-              <p>Shiny test transformer.</p>
+              <p>A shiny test transformer.</p>
             <!--  <p>Pricing: $150 - $200</p> -->
 
             <center>
