--- a/engineering.html
+++ b/engineering.html
@@ -159,7 +159,7 @@
 
             <li>
               <h3>Electromagnetic Compatability Lab</h3>
-              <p>I wish I had more pictures to share, but a lot of the data was sensitive. Here is a random tiny component.</p>
+              <p>I wish I had more pictures to share, but a lot of the data was somewhat sensitive. Here is a random tiny component.</p>
               <!--  <p>Pricing: $150 - $200</p> -->
 
               <center>
