--- a/fitness.html
+++ b/fitness.html
@@ -133,7 +133,8 @@
 
 
 <h1 style="text-INDENT:45px">Fitness</h1>
-   <p style="padding-left: 46px; padding-right:46px; text-INDENT: 45px;"> Not much to be said here except shred semester is here &#x1F525;&#x1F525;&#x1F525;!! Haha, jokes aside, I want to lose all the fat that I gained and be able to fit into my tight, never worn t-shirts. I love eating and I am constantly losing and gaining weight. Since this is unhealthy, I want to get into shape again and maintain it.
+   <p style="padding-left: 46px; padding-right:46px; text-INDENT: 45px;"> Not much to be said here except shred semester is here &#x1F525;&#x1F525;&#x1F525;!! Haha, jokes aside, I want to lose all the fat that I gained
+		 and be able to fit into my tight, never worn t-shirts. I love eating and I am constantly losing and gaining weight. I'm going to get into shape again and maintain it.
 			I also developed the bad habbit of staying seated at a desk all day and not moving around...I'm trying to change that! I plan on doing cardio at least three times a week.</p>
 
 			<p style="padding-left: 46px; padding-right:46px; text-INDENT: 45px;"> Whatever I do, I'm not going to touch any pre-workout, protein powder or any supplements. You also won't see me squatting or benching.
