--- a/radio.html
+++ b/radio.html
@@ -155,7 +155,7 @@ function showSlides() {
 		<article id="main-colAbt">
 			<h1 class="page-title">Amateur Radio</h1>
 			<p style="text-INDENT:45px">
-				You are able to watch your favorite YouTube videos because of radio. All wireless communications began with radio. Amateur radio means engineers playing around with electronics, radio frequency and equipment at multiple allocated bands, to see what can be done and have fun.
+				You are able to watch your favorite YouTube videos because of radio. All wireless communications began with radio. Amateur radio = engineers playing around with electronics, radio frequency and equipment to see what can be done and have fun.
 
 <!--
 			<p class="dark">
