--- a/fitness.html
+++ b/fitness.html
@@ -138,7 +138,7 @@
 			I also developed the bad habbit of staying seated at a desk all day and not moving around...I'm trying to change that! I plan on doing cardio at least three times a week.</p>
 
 			<p style="padding-left: 46px; padding-right:46px; text-INDENT: 45px;"> Whatever I do, I'm not going to touch any pre-workout, protein powder or any supplements. You also won't see me squatting or benching.
-			Also, I'm trying to gain a bit of muscle and strength to achive some calisthenics goals. Stayed tuned for that&#128572;. </p>
+			Also, I'm trying to gain a bit of muscle and strength to achive some calisthenics goals. Stayed tuned&#128572;. </p>
 </div>
 </section>
 
