--- a/engineering.html
+++ b/engineering.html
@@ -172,7 +172,7 @@
             <br>
 						<li>
               <h3>Cardboard safe with a fuctional lock</h3>
-              <p>This is a cardboard safe that myself along and two others built a long time ago. It's a cardboard safe with a fully functional lock. I'm showing it because I had a lot of fun designing and building this thing, and it works excellent.</p>
+              <p>This is a cardboard safe that myself and two others built a long time ago. It has a fully functional lock. I'm displaying it because I had a lot of fun designing and building this thing, and it works excellent.</p>
               <!--  <p>Pricing: $150 - $200</p> -->
 
 							<div class="row">
