--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <section id="showcase">
       <div class="container">
         <h1>Welcome to my website!</h1>
-       <p><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>**There is no backend to this website...working on it :)**</p>
+    <!--   <p><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>**There is no backend to this website...working on it :)**</p> -->
       </div>
     </section>
 
