--- a/radio.html
+++ b/radio.html
@@ -157,7 +157,8 @@ function showSlides() {
 		<article id="main-colAbt">
 			<h1 class="page-title">Amateur Radio</h1>
 			<p style="text-INDENT:45px">
-				You are able to watch your favorite YouTube videos because of radio. All wireless communications began with radio. Amateur radio = engineers playing around with electronics, radio frequency and equipment to see what can be done and have fun. "Mess around and see what happens."
+				All wireless communications began with radio. If it wasn't for radio, you wouldn't be seeing this, your new favorite site.
+				Amateur radio = engineers playing around with electronics, radio frequency and equipment to see what can be done and also have fun. "Mess around and see what happens."
 
 <!--
 			<p class="dark">
