--- a/radio.html
+++ b/radio.html
@@ -215,7 +215,7 @@ function showSlides() {
 				<br>
 				<li>
 					<h3>Meeting Bob Heil at WinterFest 2022</h3>
-					<p>We met inventor, sound and radio engineer, Bob Heil, at WinterFest 2022. He later donated a bunch of new equipment to the club. He is very nice and we share the same birthday. We also tried to sell an old radio from the Vietnam War but it ended coming back home with me...$1k if anyone wants it.</p>
+					<p>We met inventor, sound and radio engineer, Bob Heil, at WinterFest 2022. He later donated new equipment to the club and we share the same birthday. At the event, We tried to sell an old radio from the Vietnam War but it ended coming back home with me...$1k if anyone wants it.</p>
 					<!--  <p>Pricing: $150 - $200</p> -->
 
 					<center>
@@ -231,7 +231,7 @@ function showSlides() {
 
 				<li>
 					<h3>Meeting Ward Silver</h3>
-					<p>Author and engineer, Ward Silver, invited my friends and I to his main operating station. He has 3 giant towers and a lot of other cool stuff. He taught us how to safely climb a tower as well as some grounding and bonding basics. We ate hotdogs and burgers.</p>
+					<p>Author and engineer, Ward Silver, invited my friends and I to his main operating station. He has 3 giant towers and a lot of other cool stuff. He taught us how to safely climb a tower as well as some grounding and bonding basics.</p>
 					<!--  <p>Pricing: $150 - $200</p> -->
 
 
