--- a/fitness.html
+++ b/fitness.html
@@ -140,7 +140,7 @@
 			I developed the bad habbit of staying seated at a desk all day and not moving around...I'm going to change that! I plan on doing cardio at least three times a week.</p>
 
 			<p style="padding-left: 46px; padding-right:46px; text-INDENT: 45px;"> Whatever I do, I'm not going to touch any pre-workout, protein powder or any supplements. You also won't find me squatting or benching.
-			Also, I'm going to gain strength to achive some calisthenics goals. Stayed tuned&#128572;. </p>
+			Also, I'm going to achive some calisthenics goals. Stayed tuned&#128572;. </p>
 </div>
 </section>
 
