--- a/radio.html
+++ b/radio.html
@@ -158,7 +158,7 @@ function showSlides() {
 			<h1 class="page-title">Amateur Radio</h1>
 			<p style="text-INDENT:45px">
 				All wireless communications began with radio. If it wasn't for radio, you wouldn't be seeing this, your new favorite site.
-				Amateur radio = engineers playing around with electronics, radio frequency and equipment to see what can be done and also have fun. "Mess around and see what happens."
+				Amateur radio = engineers playing around with electronics, radio frequency and equipment to see what can be done and also have fun. "Mess around and find out."
 
 <!--
 			<p class="dark">
