--- a/about.html
+++ b/about.html
@@ -201,7 +201,7 @@
 
 
 				<p  style="text-INDENT: 40px">
-										This semester I'm helping the microsatellite team by designing, building and testing a low-noise amplifier (LNA) for one of the satellites that we hope gets launched to space in a year.
+										This semester I'm helping the microsatellite team by designing, building and testing a low-noise amplifier (LNA) for one of the satellites that we hope gets launched to space next year.
 								</p>
       </td>
     </tr>
