--- a/fitness.html
+++ b/fitness.html
@@ -136,7 +136,7 @@
 
 <h1 style="text-INDENT:45px">Fitness</h1>
    <p style="padding-left: 46px; padding-right:46px; text-INDENT: 45px;"> Grind time babyyy &#x1F525;&#x1F525;&#x1F525;!! Haha, I am going to lose all the fat that I recently gained
-		 to be able to fit into my never worn t-shirts. I love eating and I am constantly losing and gaining weight but I'm going to get back into shape and maintain it.
+		 and be able to fit into my never worn t-shirts. I love eating and I am constantly losing and gaining weight but I'm going to get back into shape and maintain it.
 			I developed the bad habbit of staying seated at a desk all day and not moving around...I'm going to change that! I plan on doing cardio at least three times a week.</p>
 
 			<p style="padding-left: 46px; padding-right:46px; text-INDENT: 45px;"> Whatever I do, I'm not going to touch any pre-workout, protein powder or any supplements. You also won't find me squatting or benching.
