--- a/engineering.html
+++ b/engineering.html
@@ -149,7 +149,7 @@
           <ul id="services">
             <li>
               <h3>Power Transformers</h3>
-              <p>A shiny test transformer.</p>
+              <p>345,000 volts</p>
             <!--  <p>Pricing: $150 - $200</p> -->
 
             <center>
@@ -160,8 +160,8 @@
             <br>
 
             <li>
-              <h3>Electromagnetic Compatability Lab</h3>
-              <p>I wish I had more pictures to share, but a lot of the data was somewhat sensitive. Here is a random tiny component.</p>
+              <h3>Tiny components</h3>
+              <p>5 volts</p>
               <!--  <p>Pricing: $150 - $200</p> -->
 
               <center>
