--- a/engineering.html
+++ b/engineering.html
@@ -149,7 +149,7 @@
           <ul id="services">
             <li>
               <h3>Power Transformers</h3>
-              <p>345,000 volts</p>
+              <p>345,000 volts system</p>
             <!--  <p>Pricing: $150 - $200</p> -->
 
             <center>
@@ -161,7 +161,7 @@
 
             <li>
               <h3>Tiny components</h3>
-              <p>5 volts</p>
+              <p>5 volts system</p>
               <!--  <p>Pricing: $150 - $200</p> -->
 
               <center>
