--- a/engineering.html
+++ b/engineering.html
@@ -160,7 +160,7 @@
             <br>
 
             <li>
-              <h3>Microcontrollers</h3>
+              <h3>Small Microcontrollers</h3>
               <p>5 volts </p>
               <!--  <p>Pricing: $150 - $200</p> -->
 
