--- a/engineering.html
+++ b/engineering.html
@@ -149,7 +149,7 @@
           <ul id="services">
             <li>
               <h3>Power Transformers</h3>
-              <p>345,000 volts </p>
+              <p>From big - 345,000 volts </p>
             <!--  <p>Pricing: $150 - $200</p> -->
 
             <center>
@@ -160,8 +160,8 @@
             <br>
 
             <li>
-              <h3>Small Microcontrollers</h3>
-              <p>5 volts </p>
+              <h3>Microcontrollers</h3>
+              <p>To small - 5 volts </p>
               <!--  <p>Pricing: $150 - $200</p> -->
 
               <center>
