--- a/gallery.html
+++ b/gallery.html
@@ -285,7 +285,7 @@ function showSlides() {
 	<div class="clearfix"></div>
 
 	<div style="padding-left: 60px; padding-right: 60px;">
-	  <p>I might be at the bottom of photography but I can't be good at everything, right? </p>
+	  <p>I might be at the bottom of photography and poses, but I can't be good at everything, right? </p>
 	  <p style="text-INDENT: 40px">Thank you for viewing my gallery. I hope you enjoyed it:)</p>
 	</div>
 
