--- a/engineering.html
+++ b/engineering.html
@@ -14,9 +14,9 @@
 
 	<meta charset="utf-8">
 	<meta name="viewport" content "width=device-width">
-	<meta name="description" content="Pabloidea">
-	<meta name="keywords" content="Pabloidea, Engineering, Pabloidea Engineering">
-	<meta name="author" content="Pabloidea">
+	<meta name="description" content="Pabloidea" />
+	<meta name="keywords" content="Pabloidea, Engineering, Pabloideafit" />
+	<meta name="author" content="Pabloidea" />
 		<title>Pabloidea | Engineering</title>
 		<link rel="stylesheet" href="./css/style2.css">
 
