--- a/radio.html
+++ b/radio.html
@@ -217,7 +217,7 @@ function showSlides() {
 				<br>
 				<li>
 					<h3>Meeting Bob Heil at WinterFest 2022</h3>
-					<p>We met inventor, sound and radio engineer, Bob Heil, at WinterFest 2022. He later donated new equipment to the club and we share the same birthday. At the event, we tried to sell an old radio from the Vietnam War but it ended coming back home with me...$1k if anyone wants it.</p>
+					<p>We met inventor, sound and radio engineer, Bob Heil, at WinterFest 2022! He later donated new equipment to the club and we share the same birthday. At the event, we tried to sell an old radio from the Vietnam War but it ended coming back home with me...$1k if anyone wants it.</p>
 					<!--  <p>Pricing: $150 - $200</p> -->
 
 					<center>
