--- a/radio.html
+++ b/radio.html
@@ -203,59 +203,27 @@ function showSlides() {
 
 						<div class="row">
 							<div class="column">
-									<img src="./images/Radio/RadBench.JPG" alt="Cardboard safe dial" style="width:100%">
+									<img src="./images/Radio/RadBench.JPG" alt="W0EEE workbench" style="width:100%">
 							</div>
 							<div class="column">
-								<img src="./images/Radio/RadSpon.JPG" alt="Cardboard safe front" style="width:100%">
+								<img src="./images/Radio/RadSpon.JPG" alt="Sponsorship" style="width:100%">
 							</div>
 							<div class="column">
-								<img src="./images/Radio/RadDairy.jpg" alt="Cardboard safe mechanism" style="width:100%">
+								<img src="./images/Radio/RadDairy.jpg" alt="Convoy at Steelville" style="width:100%">
 							</div>
 
 				</li>
 
+
 				<br>
 				<li>
-					<h3>Meeting Bob Heil at WinterFest 2022</h3>
-					<p>We met inventor, sound and radio engineer, Bob Heil, at WinterFest 2022! He later donated new equipment to the club and we share the same birthday. At the event, we tried to sell an old radio from the Vietnam War but it ended coming back home with me...$1k if anyone wants it.</p>
+					<h3>Missouri S&T Amateur Radio Club Centennial — 2023</h3>
+					<p>The club made the Misssouri S&T News! We are celebrating 100 years of ham radio&#xe410;</p>
 					<!--  <p>Pricing: $150 - $200</p> -->
 
 					<center>
-						<img src="./images/Radio/RadHeil.jpg" alt="Selfie with Radio" style="width:800px;height:600px;">
+						<img src="./images/Radio/Radio_club_100_News.jpg" alt="W0EEE on mst news" style="width:800px;height:600px;">
 					</center>
-
-					<center>
-							<img src="./images/Radio/RadSprkViet.JPG" alt="Cardboard safe mechanism" style="width:600px">
-					</center>
-				</li>
-
-				<br>
-
-				<li>
-					<h3>Hanging out with Ward Silver — March 2022</h3>
-					<p>Author and engineer, Ward Silver, invited my friends and I to his main operating station. He has three giant towers and a lot of other cool stuff. He taught us how to safely climb a tower as well as some grounding and bonding basics.</p>
-					<!--  <p>Pricing: $150 - $200</p> -->
-
-
-					<div class="row">
-						<div class="column">
-							<img src="./images/Radio/RadExtraBook.JPG" alt="Cardboard safe front" style="width:70%">
-						</div>
-						<div class="column">
-							<img src="./images/Radio/RadHam4Dum.JPG" alt="Cardboard safe mechanism" style="width:70%">
-						</div>
-						<div class="column">
-							<img src="./images/Radio/RadBkGND.JPG" alt="Cardboard safe dial" style="width:70%">
-						</div>
-						<div class="column">
-							<img src="./images/Radio/RadWardTwr.JPG" alt="Cardboard safe dial" style="width:70%">
-						</div>
-						<div class="column">
-							<img src="./images/Radio/RadWard.JPG" alt="Cardboard safe dial" style="width:70%">
-						</div>
-						<div class="column">
-							<img src="./images/Radio/RadWardGND.JPG" alt="Cardboard safe dial" style="width:70%">
-						</div>
 
 				</li>
 
@@ -271,6 +239,52 @@ function showSlides() {
 						<img src="./images/Radio/W0EEEwithWardSilver.jpg" alt="Picture with Ward Silver" style="width:600px;">
 					</center>
 
+				</li>
+
+
+				<br>
+
+				<li>
+					<h3>Hanging out with Ward Silver — March 2022</h3>
+					<p>Author and engineer, Ward Silver, invited my friends and I to his main operating station. He has three giant towers and a lot of other cool stuff. He taught us how to safely climb a tower as well as some grounding and bonding basics.</p>
+					<!--  <p>Pricing: $150 - $200</p> -->
+
+
+					<div class="row">
+						<div class="column">
+							<img src="./images/Radio/RadExtraBook.JPG" alt="pic 1" style="width:70%">
+						</div>
+						<div class="column">
+							<img src="./images/Radio/RadHam4Dum.JPG" alt="pic 2" style="width:70%">
+						</div>
+						<div class="column">
+							<img src="./images/Radio/RadBkGND.JPG" alt="pic 3" style="width:70%">
+						</div>
+						<div class="column">
+							<img src="./images/Radio/RadWardTwr.JPG" alt="pic 4" style="width:70%">
+						</div>
+						<div class="column">
+							<img src="./images/Radio/RadWard.JPG" alt="pic 5" style="width:70%">
+						</div>
+						<div class="column">
+							<img src="./images/Radio/RadWardGND.JPG" alt="pic 6" style="width:70%">
+						</div>
+
+				</li>
+
+				<br>
+				<li>
+					<h3>Meeting Bob Heil at WinterFest 2022</h3>
+					<p>We met inventor, sound and radio engineer, Bob Heil, at WinterFest 2022! He later donated new equipment to the club and we share the same birthday. At the event, we tried to sell an old radio from the Vietnam War but it ended coming back home with me...$1k if anyone wants it.</p>
+					<!--  <p>Pricing: $150 - $200</p> -->
+
+					<center>
+						<img src="./images/Radio/RadHeil.jpg" alt="Selfie with Radio" style="width:800px;height:600px;">
+					</center>
+
+					<center>
+							<img src="./images/Radio/RadSprkViet.JPG" alt="Loading Vietnam Radio" style="width:600px">
+					</center>
 				</li>
 
 
