--- a/radio.html
+++ b/radio.html
@@ -218,11 +218,11 @@ function showSlides() {
 				<br>
 				<li>
 					<h3>Missouri S&T Amateur Radio Club Centennial — 2023</h3>
-					<p>The club made the Misssouri S&T News! We are celebrating 100 years of ham radio&#xe410;</p>
+					<p>The club made the Misssouri S&T News! We are celebrating 100 years of ham radio&#128562;</p>
 					<!--  <p>Pricing: $150 - $200</p> -->
 
 					<center>
-						<img src="./images/Radio/Radio_club_100_News.jpg" alt="W0EEE on mst news" style="width:800px;height:600px;">
+						<img src="./images/Radio/Radio_club_100_News.jpg" alt="W0EEE on mst news" style="width:800px;height:1000px;">
 					</center>
 
 				</li>
