--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 							<div class="dropdown-content">
 								<a href="radio.html">Radio</a>
 								<a href="engineering.html">Engineering</a>
-								<a href="fitness.html">Fitness</a>
-								<a href="gallery.html">Gallery</a>
+								<!--<a href="fitness.html">Fitness</a>-->
+								<!--<a href="gallery.html">Gallery</a>-->
 
 							</div>
 						</div>
