--- a/about.html
+++ b/about.html
@@ -147,7 +147,7 @@
           <p style="text-INDENT: 40px">
             Hello my name is Pablo and I like to eat peanut butter and honey sandwiches. I am currently studying Electrical, Computer and Aerospace Engineering.
 			I grew up in México City and now my family lives in St. Louis, Missouri. I enjoy going back to visit family and I love México with a passion. 
-			I spent all of my teenage years playing sports like American football, swimming, wresting, playing water polo and pick up basketball. Now I'm a full time student with limited mobility and knee pain. 
+			I spent all of my teenage years playing sports like American football, swimming, wresting, rock climbing, playing water polo and pick up basketball. Now I'm a full time student with limited mobility and knee pain. 
 			Jokes aside, I couldn't be more grateful for everything I've learned in the past year.
 			
 
